--- a/css/styles.css
+++ b/css/styles.css
@@ -186,3 +186,12 @@ font-family: 'Raleway', sans-serif;
     color: var(--color-cloud);
 }
 
+/** -------------------PORTFOLIO------------------- */
+
+.filter-btn {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: var(--actent-color-iris);
+}
