--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,8 @@ body {
 
 .header-logo{
 
+    font-family: 'Raleway', sans-serif;
+    font-style: normal;
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
@@ -93,13 +95,13 @@ body {
     color: var(--active-color-ocean);
 }
 
-/*! Не работает при активной странице!!!*/
-.header-link.current {
+.header-link-current {
     color: var(--active-color-ocean);}
 
 
 .header-address {
     text-decoration: none;
+    font-style: normal;
 }
 
 .header-address-list {
@@ -158,8 +160,7 @@ background: var(--actent-color-iris);
  /** -------------------FEATURES------------------- */
 
 .features {}
-.features-title {
-}
+.features-title {}
 
 .features-list {}
 .features-item {}
