--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 :root {
     --primary-text-color-slate: #434455; 
-    --title-text-color-navy-blue: #2E2F42;
+    --title-text-color-navy-blue: #2e2f42;
     --title-hero-color-white: #FFFFFF;
     --actent-color-iris: #4D5AE5;
     --active-color-ocean: #404BBF;
